--- a/style/style.css
+++ b/style/style.css
@@ -78,6 +78,9 @@
 .text-one {
   font-size: 6rem;
   margin-left: 100px;
+  color: white;
+  text-shadow: -1px -1px 0 #000, 1px -1px 0 #000, -1px 1px 0 #000,
+    1px 1px 0 #000;
 }
 
 .text-two {
@@ -452,4 +455,3 @@
     display: none;
   }
 }
-
